fixed alignment issues

--- a/src/card.css
+++ b/src/card.css
@@ -7,7 +7,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    /* align-items: flex-start; */
     border-radius: 20px;
     padding: 10px;
     background-color: #fff;
@@ -22,6 +23,15 @@
 .card h1, h2, h4{
     margin: 0;
     align-self: center;
+}
+
+.extra-data{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    /* border: solid black; */
 }
 
 @media screen and (max-width: 415px){
